# OrbitAI

./: .gitignore  README.md  setup.sh  versel.json
backend/: create_tables.py  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_db.py
backend/api/: index.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/chat/: ChatArea.jsx  ChatInput.jsx  Message.jsx  TypingIndicator.jsx  WelcomeScreen.jsx
frontend/src/components/layout/: Navbar.jsx  Sidebar.jsx
frontend/src/components/ui/: SettingsModal.jsx
frontend/src/pages/: ChatPage.jsx  LoginPage.jsx  SignupPage.jsx
frontend/src/store/: authStore.js  chatStore.js  themeStore.js
frontend/src/styles/: globals.css
frontend/src/utils/: api.js  export.js
