[project]
name = "orbitai-backend"
version = "1.0.0"
requires-python = ">=3.11,<3.13"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "python-multipart==0.0.9",

    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",

    "google-genai==1.30.0"
]